NewArchive/17873283ec/output
main.cpp:23:11: error: too few arguments to function call, expected 1, have 0
    n1::A();
    ~~~~~ ^
main.cpp:5:9: note: 'A' declared here
        void A(int);
        ^
1 error generated.
